// Copyright (c) 2024 Digital Asset (Switzerland) GmbH and/or its affiliates. All rights reserved.
// SPDX-License-Identifier: Apache-2.0

syntax = "proto3";

package com.digitalasset.canton.sequencer.admin.v30;

message BftSequencerSnapshotAdditionalInfo {
  // State transfer metadata for onboarding
  map<string, FirstKnownAt> sequencers_first_known_at = 1;

  message FirstKnownAt {
    optional int64 timestamp = 1;
    optional int64 epoch_number = 2;
  }
}
